# megaquant-rag-compress

./: .gitignore  CHANGELOG.md  CITATION.cff  DATA.md  LICENSE  README.md  compare_hdc_turbovec_rotor.py  hdc_rotor_v2_compact.py  pyproject.toml  real_bench_hdc_quant_v2.py
methods/: README.md
reports/: frontier_benchmark_report.md  frontier_summary.md
results/: frontier_rag_benchmark.csv
scripts/: run_frontier_benchmark.py  run_proxy_benchmark.py  run_real_benchmark.py
src/megaquant_hdc/: __init__.py  benchmarks.py  data.py  efficient_methods.py  methods.py  registry.py  utils.py
